--- a/style.css
+++ b/style.css
@@ -76,6 +76,8 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 100%;
+  height: auto;
 }
 .button {
     background-color: #2196f3;
