fixed the start button not showing up

--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 /*Default CSS*/
+
 html {
     background-color: #bbbbbb;
     padding: 0px;
- }
+}
+
 body {
     width: 80%;
     min-height: calc(100vh - 4em);
@@ -13,18 +15,21 @@ body {
     border-left-style: solid;
     border-right-style: solid;
     border-width: 20px;
- }
+}
+
 p {
     color: #444444;
     font-family: 'Roboto', sans-serif;
     font-size: 16pt;
     line-height: 1;
     margin: 4pt;
- }
+}
+
 p.value-description {
     text-indent: -16pt;
     margin-left: 20pt;
- }
+}
+
 p.question {
     margin: 16pt auto;
     color: #333333;
@@ -41,7 +46,8 @@ p.question {
     justify-content: center;
     align-items: center;
     text-align: center;
- }
+}
+
 p.result {
     margin: 16pt auto;
     color: #333333;
@@ -57,8 +63,9 @@ p.result {
     justify-content: center;
     align-items: center;
     text-align: center;
- }
- p.description {
+}
+
+p.description {
     margin: 16pt auto;
     color: #333333;
     font-family: 'Montserrat', sans-serif;
@@ -74,7 +81,8 @@ p.result {
     justify-content: center;
     align-items: center;
     text-align: center;
- }
+}
+
 h1 {
     color: #222222;
     font-family: 'Montserrat', sans-serif;
@@ -83,7 +91,8 @@ h1 {
     line-height: 72pt;
     margin-top: 0pt;
     margin-bottom: 0pt;
- }
+}
+
 h2 {
     color: #333333;
     font-family: 'Montserrat', sans-serif;
@@ -92,28 +101,35 @@ h2 {
     margin-top: 12pt;
     margin-bottom: 0pt;
 }
+
+
 /*Base CSS*/
+
 li {
     font-size: 16pt;
     text-indent: 16pt;
- }
+}
+
 a {
     font-family: inherit;
- }
+}
+
 img.center {
     display: block;
     margin: 1em auto;
     width: 50%;
     min-width: 500pt;
- }
+}
+
 img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 100%;
-  height: auto;
- }
-.button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    height: auto;
+}
+
+.qbutton {
     background-color: #2196f3;
     font-family: 'Montserrat', sans-serif;
     border: none;
@@ -129,8 +145,27 @@ img {
     margin: -2px auto;
     cursor: pointer;
     display: none;
- }
-.small_button, .small_button_off {
+}
+
+.button {
+    background-color: #2196f3;
+    font-family: 'Montserrat', sans-serif;
+    border: none;
+    border-radius: 8pt;
+    color: white;
+    padding: 8pt;
+    width: 50%;
+    min-width: 500pt;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    font-size: 24pt;
+    margin: -2px auto;
+    cursor: pointer;
+}
+
+.small_button,
+.small_button_off {
     background-color: #333;
     font-family: 'Montserrat', sans-serif;
     border: none;
@@ -145,27 +180,32 @@ img {
     font-size: 18pt;
     margin: -2px auto;
     cursor: pointer;
- }
+}
+
 .small_button_off {
     background-color: #ddd;
     color: #888;
     border: 2px solid #888;
     cursor: not-allowed;
     margin: -4px auto;
- }
-.hidden{
-    display:none
- }
+}
+
+.hidden {
+    display: none
+}
+
 div.text-wrapper {
     font-family: 'Montserrat', sans-serif;
     font-size: 36pt;
     line-height: 36pt;
     color: #222222;
     display: inline-block;
- }
+}
+
 span.weight-300 {
     font-weight: 300;
- }
+}
+
 #banner {
     border-color: #444444;
     border-style: solid;
@@ -175,199 +215,214 @@ span.weight-300 {
     margin: 8pt;
     margin-left: auto;
     margin-right: auto;
- }
 }
 
 /* Light mode */
-@media(prefers-color-scheme: light){
-html {
-    background-color: #bbbbbb;
-    padding: 0px;
- }
-body {
-    width: 80%;
-    min-height: calc(100vh - 4em);
-    margin: 0 auto;
-    padding: 2em;
-    background-color: #dddddd;
-    border-color: #eeeeee;
-    border-left-style: solid;
-    border-right-style: solid;
-    border-width: 20px;
- }
-p {
-    color: #444444;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16pt;
-    line-height: 1;
-    margin: 4pt;
- }
-p.value-description {
-    text-indent: -16pt;
-    margin-left: 20pt;
- }
-p.question {
-    margin: 16pt auto;
-    color: #333333;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: normal;
-    width: 70%;
-    min-width: 500pt;
-    min-height: 144pt;
-    background-color: #eeeeee;
-    padding: 16pt;
-    border-radius: 16pt;
-    font-size: 36pt;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
- }
-p.result {
-    margin: 16pt auto;
-    color: #333333;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: normal;
-    width: 70%;
-    min-width: 500pt;
-    min-height: 144pt;
-    padding: 16pt;
-    border-radius: 16pt;
-    font-size: 48pt;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
- }
- p.description {
-    margin: 16pt auto;
-    color: #333333;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: normal;
-    width: 70%;
-    min-width: 500pt;
-    min-height: 144pt;
-    background-color: #eeeeee;
-    padding: 16pt;
-    border-radius: 16pt;
-    font-size: 36pt;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
- }
-h1 {
-    color: #222222;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 72pt;
-    text-align: center;
-    line-height: 72pt;
-    margin-top: 0pt;
-    margin-bottom: 0pt;
- }
-h2 {
-    color: #333333;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 36pt;
-    line-height: 36pt;
-    margin-top: 12pt;
-    margin-bottom: 0pt;
+@media(prefers-color-scheme: light) {
+    html {
+        background-color: #bbbbbb;
+        padding: 0px;
+    }
+    
+    body {
+        width: 80%;
+        min-height: calc(100vh - 4em);
+        margin: 0 auto;
+        padding: 2em;
+        background-color: #dddddd;
+        border-color: #eeeeee;
+        border-left-style: solid;
+        border-right-style: solid;
+        border-width: 20px;
+    }
+    
+    p {
+        color: #444444;
+        font-family: 'Roboto', sans-serif;
+        font-size: 16pt;
+        line-height: 1;
+        margin: 4pt;
+    }
+    
+    p.value-description {
+        text-indent: -16pt;
+        margin-left: 20pt;
+    }
+    
+    p.question {
+        margin: 16pt auto;
+        color: #333333;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: normal;
+        width: 70%;
+        min-width: 500pt;
+        min-height: 144pt;
+        background-color: #eeeeee;
+        padding: 16pt;
+        border-radius: 16pt;
+        font-size: 36pt;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    
+    p.result {
+        margin: 16pt auto;
+        color: #333333;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: normal;
+        width: 70%;
+        min-width: 500pt;
+        min-height: 144pt;
+        padding: 16pt;
+        border-radius: 16pt;
+        font-size: 48pt;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    
+    p.description {
+        margin: 16pt auto;
+        color: #333333;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: normal;
+        width: 70%;
+        min-width: 500pt;
+        min-height: 144pt;
+        background-color: #eeeeee;
+        padding: 16pt;
+        border-radius: 16pt;
+        font-size: 36pt;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    
+    h1 {
+        color: #222222;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 72pt;
+        text-align: center;
+        line-height: 72pt;
+        margin-top: 0pt;
+        margin-bottom: 0pt;
+    }
+    
+    h2 {
+        color: #333333;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 36pt;
+        line-height: 36pt;
+        margin-top: 12pt;
+        margin-bottom: 0pt;
+    }
 }
-}
-/* Dark mode*/
-@media(prefers-color-scheme: dark){
-html {
-    background-color: #000000;
-    padding: 0px;
- }
-body {
-    width: 80%;
-    min-height: calc(100vh - 4em);
-    margin: 0 auto;
-    padding: 2em;
-    background-color: #3b3b3b;
-    border-color: #505050;
-    border-left-style: solid;
-    border-right-style: solid;
-    border-width: 20px;
- }
-p {
-    color: #cccccc;
-    font-family: 'Roboto', sans-serif;
-    font-size: 16pt;
-    line-height: 1;
-    margin: 4pt;
- }
-p.value-description {
-    text-indent: -16pt;
-    margin-left: 20pt;
- }
-p.question {
-    margin: 16pt auto;
-    color: #cccccc;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: normal;
-    width: 70%;
-    min-width: 500pt;
-    min-height: 144pt;
-    background-color: #000000;
-    padding: 16pt;
-    border-radius: 16pt;
-    font-size: 36pt;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
 
- }
-p.result {
-    margin: 16pt auto;
-    color: #cccccc;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: normal;
-    width: 70%;
-    min-width: 500pt;
-    min-height: 144pt;
-    padding: 16pt;
-    border-radius: 16pt;
-    font-size: 48pt;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
- }
-p.description {
-    margin: 16pt auto;
-    color: #cccccc;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: normal;
-    width: 70%;
-    min-width: 500pt;
-    min-height: 144pt;
-    background-color: #000000;
-    padding: 16pt;
-    border-radius: 16pt;
-    font-size: 36pt;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
- }
-h1 {
-    color: #cccccc;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 72pt;
-    text-align: center;
-    line-height: 72pt;
-    margin-top: 0pt;
-    margin-bottom: 0pt;
- }
-h2 {
-    color: #cccccc;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 36pt;
-    line-height: 36pt;
-    margin-top: 12pt;
-    margin-bottom: 0pt;
-}
+/* Dark mode*/
+@media(prefers-color-scheme: dark) {
+    html {
+        background-color: #000000;
+        padding: 0px;
+    }
+    
+    body {
+        width: 80%;
+        min-height: calc(100vh - 4em);
+        margin: 0 auto;
+        padding: 2em;
+        background-color: #3b3b3b;
+        border-color: #505050;
+        border-left-style: solid;
+        border-right-style: solid;
+        border-width: 20px;
+    }
+    
+    p {
+        color: #cccccc;
+        font-family: 'Roboto', sans-serif;
+        font-size: 16pt;
+        line-height: 1;
+        margin: 4pt;
+    }
+    
+    p.value-description {
+        text-indent: -16pt;
+        margin-left: 20pt;
+    }
+    
+    p.question {
+        margin: 16pt auto;
+        color: #cccccc;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: normal;
+        width: 70%;
+        min-width: 500pt;
+        min-height: 144pt;
+        background-color: #000000;
+        padding: 16pt;
+        border-radius: 16pt;
+        font-size: 36pt;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    
+    p.result {
+        margin: 16pt auto;
+        color: #cccccc;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: normal;
+        width: 70%;
+        min-width: 500pt;
+        min-height: 144pt;
+        padding: 16pt;
+        border-radius: 16pt;
+        font-size: 48pt;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    
+    p.description {
+        margin: 16pt auto;
+        color: #cccccc;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: normal;
+        width: 70%;
+        min-width: 500pt;
+        min-height: 144pt;
+        background-color: #000000;
+        padding: 16pt;
+        border-radius: 16pt;
+        font-size: 36pt;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+    }
+    
+    h1 {
+        color: #cccccc;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 72pt;
+        text-align: center;
+        line-height: 72pt;
+        margin-top: 0pt;
+        margin-bottom: 0pt;
+    }
+    
+    h2 {
+        color: #cccccc;
+        font-family: 'Montserrat', sans-serif;
+        font-size: 36pt;
+        line-height: 36pt;
+        margin-top: 12pt;
+        margin-bottom: 0pt;
+    }
 }
