--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ span.weight-300 {
 /* The container <div> - needed to position the dropdown content */
 #dropdown {
 	position: relative;
-	display: inline-block;
+	display: block;
 }
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
@@ -235,6 +235,10 @@ span.weight-300 {
 	position: absolute;
 	min-width: 160px;
 	z-index: 1;
+}
+
+.dropdown-content a {
+    display: block;
 }
 
 /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
