Added tree link to index, updated discord tag,fixed some typos and generalized large-button CSS

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ button {
     border-radius: 10px;
     display: block;
     text-align: center;
-    margin: 0 auto;
+    margin: 0.5em auto;
     cursor: pointer;
 }
 
@@ -345,7 +345,7 @@ button {
   select {
     margin: 2 auto;
   }
-  #startbutton, #indexbutton, #creditsbutton, #returnbutton {
+  .large-button {
     max-width: 80%;
     width: 80%;
     min-width: 80%;
